--- a/styles/contact.css
+++ b/styles/contact.css
@@ -192,7 +192,7 @@ nav {
 }
 
 @keyframes text-color-change {
-    from {color: var(--light-gray);}
+    from {color: var(--dark-gray);}
     to {color: var(--dark-yellow);}
   }
 
@@ -233,7 +233,7 @@ nav {
     }
 
     .nav-link {
-        color: var(--light-gray);
+        color: var(--dark-gray);
         font-size: 1.3rem;
         font-weight: normal;
         margin-left: 7px;
