--- a/styles/home.css
+++ b/styles/home.css
@@ -184,7 +184,7 @@ nav {
 }
 
 @keyframes text-color-change {
-    from {color: var(--light-gray);}
+    from {color: var(--dark-gray);}
     to {color: var(--dark-yellow);}
   }
 
@@ -225,7 +225,7 @@ nav {
   }
 
   .nav-link {
-    color: var(--light-gray);
+    color: var(--dark-gray);
     font-size: 1.3rem;
     font-weight: normal;
     margin-left: 7px;
